@@ -46,9 +46,10 @@ Speed, next to ease of use and thread-safety, is of primary concern
 </li>
 </ul>
 </p>
-<h2>Version 0.1-alpha1</h2>
-<p>This is the current alpha release of the Container library. It contains 
-implementations for the following objects:
+<h2>Version 0.1-alpha2</h2>
+<p>This is the current alpha release of the Container library. It fixes a few 
+bugs found in the 0.1-alpha1 version. It contains implementations for 
+the following objects:
 <ul>
 <li><b>A queue</b><br/>
 The provided queue is aimed at being fast and uses a non-blocking algorithm
@@ -146,6 +147,7 @@ List-Based Sets"; M. M. Micheal; PODC 2002</li>
 <!--  RIGHT-HAND SIDE TEXT HERE -->
 <p>
 <h2>Download</h2>
+<a href="http://prdownloads.sourceforge.net/jail-ust/libcontain-0.1-alpha2.tar.gz?download">Version 0.1-alpha2</a><br/>
 <a href="http://prdownloads.sourceforge.net/jail-ust/libcontain-0.1-alpha1.tar.gz?download">Version 0.1-alpha1</a><br/>
 <a href="http://prdownloads.sourceforge.net/jail-ust/libcontain-0.0-alpha2.tar.gz?download">Version 0.0-alpha2</a><br/>
 <a href="http://prdownloads.sourceforge.net/jail-ust/libcontain-0.0-alpha1.tar.gz?download">Version 0.0-alpha1</a><br/>
@@ -165,7 +167,7 @@ width="210" height="62" border="0" align="right" alt=
 "SourceForge.net Logo"></a>
 </td><td style="vertical-align: bottom; text-align: right; font-size: smaller;">
 <a href="#top">back to top</a><br/>
-This page was last updated: $Date: 2004/04/19 17:56:06 $
+This page was last updated: $Date: 2004/04/23 14:15:36 $
 </td></tr></tbody></table>
 </body>
 </html>
